basic grid, performance

--- a/galaxian-clone/galaxian-clone.vcxproj
+++ b/galaxian-clone/galaxian-clone.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="GalaxianPink.cpp" />
     <ClCompile Include="GalaxianRed.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Grid.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Projectile.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="GalaxianRed.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="Grid.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Projectile.h" />
   </ItemGroup>
