menu, game, scoreboard

--- a/galaxian-clone/galaxian-clone.vcxproj
+++ b/galaxian-clone/galaxian-clone.vcxproj
@@ -138,11 +138,14 @@
     <ClCompile Include="GalaxianCyan.cpp" />
     <ClCompile Include="GalaxianPink.cpp" />
     <ClCompile Include="GalaxianRed.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Projectile.cpp" />
+    <ClCompile Include="Scoreboard.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Collisionable.h" />
@@ -151,11 +154,14 @@
     <ClInclude Include="GalaxianCyan.h" />
     <ClInclude Include="GalaxianPink.h" />
     <ClInclude Include="GalaxianRed.h" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="Grid.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Projectile.h" />
+    <ClInclude Include="Scoreboard.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
